tailwind css display

--- a/index.html
+++ b/index.html
@@ -9,9 +9,34 @@
     <title>Document</title>
 </head>
 
-<body>
-    <div class="box-border h-30 w-40 p-4 text-2xl border-4 bg-green-800 m4">
+<body class="text-center">
+    <!-- <div class="box-border h-30 w-40 p-4 text-2xl border-4 bg-green-800 m4">
         Tailwind CSS Developer Uchchash
+    </div> -->
+    <!-- CSS Display -->
+    <!-- block -->
+    <div class="bg-green-200 p-4 mx-16 space-y-4">
+        <span class="block h-12 bg-green-500 rounded-lg">Uchchash</span>
+        <span class="block h-12 bg-green-500 rounded-lg">Ullash</span>
+        <span class="block h-12 bg-green-500 rounded-lg">Turjo</span>
+    </div>
+    <!-- Inline block -->
+    <div class="bg-red-200 p-4 mx-16 space-y-1">
+        <span class="inline-block w-32 h-12 bg-green-500 rounded-lg">Box1</span>
+        <span class="inline-block w-32 h-12 bg-green-500 rounded-lg">Box2</span>
+        <span class="inline-block w-32 h-12 bg-green-500 rounded-lg">Box3</span>
+    </div>
+    <!-- Inline -->
+    <div class="bg-blue-500 p-4 mx-16 space-y-4">
+        <span class="inline w-32 h-12 bg-green-500 rounded-lg">Box1</span>
+        <span class="inline w-32 h-12 bg-green-500 rounded-lg">Box2</span>
+        <span class="inline w-32 h-12 bg-green-500 rounded-lg">Box3</span>
+    </div>
+    <!-- Flex -->
+    <div class="flex bg-green-200 p-4 mx-16 ">
+        <div class="flex-auto bg-green-500 rounded-lg">1</div>
+        <div class="flex-auto bg-green-500 rounded-lg">2</div>
+        <div class="flex-auto bg-green-500 rounded-lg">3</div>
     </div>
 </body>
 
