--- a/index.html
+++ b/index.html
@@ -10,40 +10,16 @@
 </head>
 
 <body class="text-center">
-    <!-- CSS object position -->
-    <div >
-        <p class="overflow-auto bg-green-200
-        mx-16 h-24 text-justify">
-            How many times were you frustrated while looking out
-            for a good collection of programming/algorithm/interview
-            questions? What did you expect and what did you get?
-            This portal has been created to provide well written,
-            well thought and well explained solutions for selected
-            questions. An IIT Roorkee alumnus and founder of
-            GeeksforGeeks. He loves to solve programming problems
-            in most efficient ways. Apart from GeeksforGeeks, he
-            has worked with DE Shaw and Co. as a software developer
-            and JIIT Noida as an assistant professor.It is a good
-            platform to learn programming. It is an educational
-            website. Prepare for the Recruitment drive of product
-            based companies like Microsoft, Amazon, Adobe etc with
-            a free online placement preparation course. How many times were you frustrated while looking out
-            for a good collection of programming/algorithm/interview
-            questions? What did you expect and what did you get?
-            This portal has been created to provide well written,
-            well thought and well explained solutions for selected
-            questions. An IIT Roorkee alumnus and founder of
-            GeeksforGeeks. He loves to solve programming problems
-            in most efficient ways. Apart from GeeksforGeeks, he
-            has worked with DE Shaw and Co. as a software developer
-            and JIIT Noida as an assistant professor.It is a good
-            platform to learn programming. It is an educational
-            website. Prepare for the Recruitment drive of product
-            based companies like Microsoft, Amazon, Adobe etc with
-            a free online placement preparation course.
-        </p>
+    <!-- CSS object Top/Right/Bottom/Left -->
+    <div class="text-green-600 font-bold m-4">
+        <h1 class="text-3xl my-4">GeeksforGeeks</h1>
+        <p class=" text-2xl">Top/Right/Bottom/Left</p>
 
     </div>
+    <div class="relative h-28 w-28 bg-green-400 m-4">
+        <div class="absolute inset-x-0 h-9 w-16 bg-green-800"></div>
+    </div>
+
 </body>
 
 </html>
